package soliton.piezo.testing;

option java_package = "io.soliton.protobuf.testing";

option java_multiple_files = false;

message DnsRequest {
	optional string domain = 1;
}

message DnsResponse {
	optional int32 ip_address = 1;
}

service Dns {
	rpc Resolve (DnsRequest) returns (DnsResponse);
}
